<resources>
    <string name="app_name">Offline Data in Paging Room</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type Tractor…</string>
    <string name="log_out_user">Log out user</string>
    <string name="trend">TRENDINGS NOW</string>
    <string name="bookmark">My Bookmarks</string>
    <string name="search">Search</string>
    <string name="strnews">Planting rice is easy; getting it to grow through harvest is challenging. Ideally, you need at least 40 continuous days of warm temps over 70 F. (21 C.). Those of you who live in the South or in California will have the best luck, but the rest of us can also try our hand at growing rice indoors, under lights if necessary. First off, you need to find one or several plastic containers without holes. One or several depending upon how many miniature pseudo rice paddies you want to create. Next, either purchase rice seed from a gardening supplier or buy long grain brown rice from a bulk foods store or in a bag. Organically grown rice is best and it can’t be white rice, which has been processed. Fill the bucket or plastic container with 6 inches of dirt or potting soil. Add water up to 2 inches over the soil level. Add a handful of the long grain rice to the bucket. The rice will sink to the dirt. Keep the bucket in a warm, sunny area and move it to a warm place at night. Care of Rice Plants Rice plants don’t need too much care from here on out. Keep the water level at 2 inches or so above the dirt. When the rice plants are 5-6 inches tall, increase the water depth to 4 inches. Then, allow the water level to lower on its own over a period of time. Ideally, by the time you harvest them, the plants should no longer be in standing water. If all goes well, rice is ready to harvest in its fourth month. The stalks will go from green to gold to indicate it is time to harvest. Harvesting rice means cutting and gathering the panicles attached to the stalks. To harvest the rice, cut the stalks and allow them to dry, wrapped in a newspaper, for two to three weeks in a warm, dry place. Once the rice stalks have dried, roast in a very low heat oven (under 200 F./93 C.) for around an hour, then remove the hulls by hand. That’s it; you can now cook with your very own home grown, long grain brown rice.</string>
    <string name="textclose">Are you sure you want to cancel?\n all the information will be lost</string>
    <string name="addlocation">Add Location</string>
    <string name="additionalHead">Additional Equipment\'s</string>
    <string name="selectadditional">Select additional Equipment\'s available with this item.</string>
    <string name="available">Available</string>
    <string name="skip">SKIP</string>
    <string name="bookmarktooltext">My Bookmarks</string>
    <string name="calenderdate">Select Date</string>
    <string name="selectDate">Select dates to rent your tractor..</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="next">NEXT</string>
    <string name="bookedequi">Booked Equipments</string>
    <string name="all">All</string>
    <string name="pending">PENDING</string>
    <string name="received">RECIEVED</string>
    <string name="cancelled">CANCELLED</string>
    <string name="owner">Owner Name</string>
    <string name="trips">trips</string>
    <string name="callowner">Call Owner</string>
    <string name="bookingdetail">BOOKING DETAILS</string>
    <string name="moredetail">MORE DETAILS</string>
    <string name="equipment">Equipment:</string>
    <string name="rentdate">Rent Date:</string>
    <string name="status">Status:</string>
    <string name="payment">PAYMENT</string>
    <string name="cashondelivery">Cash on delivery</string>
    <string name="total">Total</string>
    <string name="noitem">No Item</string>
    <string name="equipmentHistory">Equipment History</string>
    <string name="rentagain">Rent Again</string>
    <string name="feedback">Feedback</string>
    <string name="ownername">Owner</string>
    <string name="rent">RENT</string>
    <string name="rentprice">RENT PRICE</string>
    <string name="Trips">Trips</string>
    <string name="pickuppoint">PICK UP POINT</string>
    <string name="description">Description</string>
    <string name="hr">Hr</string>
    <string name="day">Day</string>
    <string name="cancel">Cancel</string>
    <string name="rentdates">RENT DATES</string>
    <string name="rentdates1">RENT DETAILS</string>
    <string name="change">Change</string>
    <string name="additionalitems">Additional Items</string>
    <string name="additionalitemscapital">ADDITIONAL ITEMS</string>
    <string name="RS">RS.</string>
    <string name="noadditional">No Additional Item found</string>
    <string name="failed">Failed</string>
    <string name="failurereason">Unfortunately Payment was rejected.</string>
    <string name="paymentmethod">Payment Method</string>
    <string name="netBanking">Net Banking</string>
    <string name="amountt">Amount</string>
    <string name="tryagain">TRY AGAIN</string>
    <string name="feedbacktext">Please Give Your Feedback if U like service</string>
    <string name="submit">SUBMIT</string>
    <string name="userfeedback">User Feedback</string>
    <string name="status1">STATUS</string>
    <string name="view">View</string>
    <string name="cancelledbyuser">Cancelled by the partner</string>
    <string name="contractstart">Received .Contract Started</string>
    <string name="contractended">Received .Contract Ended</string>
    <string name="contractstart1">RECIEVED • CONTRACT STARTED</string>
    <string name="contractended1">RECIEVED • CONTRACT ENDED</string>
    <string name="contractend">Received .Contract Ended Wait for the partner to pick the equipment</string>
    <string name="details">Details</string>
    <string name="rentequipment">Rent Equipments Easily</string>
    <string name="dashboard">Dashboard</string>
    <string name="promotion">PROMOTIONS</string>
    <string name="offers">Offers</string>
    <string name="rewards">Rewards</string>
    <string name="mycart">MY CART</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="bookedequipment">BOOKED EQUIPMENTS</string>
    <string name="language1">LANGUAGE</string>
    <string name="news">NEWS</string>
    <string name="equipments">EQUIPMENTS</string>
    <string name="settings">SETTINGS</string>
    <string name="support">SUPPORT</string>
    <string name="pinnacle">Pinacle Farm</string>
    <string name="recent">RECENT</string>
    <string name="bookedmain">Booked Equipments</string>
    <string name="rentedequi">Rented Equipments</string>
    <string name="equipmentname">Equipment name</string>
    <string name="timeanddate">Time and date</string>
    <string name="equipmentss">Equipments</string>
    <string name="strnewsmain">America’s dairy farmers are drowning in milk...</string>
    <string name="notifications1">Notifications</string>
    <string name="daters">Rs. 1800 for</string>
    <string name="days">days</string>
    <string name="bookingtime">Booking Time</string>
    <string name="howdoyouwanttopay">How You Want To Pay?</string>
    <string name="creditcard">Credit Card</string>
    <string name="weaccept">We Accept Visa,Master Card</string>
    <string name="weacceptall">We Accept All Banking Payment</string>
    <string name="paycash">Pay cash</string>
    <string name="payonce">Pay Once When you Get Your Equipments</string>
    <string name="prooceed">Proceed To Pay</string>
    <string name="totaltext">Total Amount: Rs.</string>
    <string name="fillindetails">Fill in the details to login to</string>
    <string name="youraccount">your account. .</string>
    <string name="enterphone">Enter Phone Number</string>
    <string name="password1">Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="newaccount">New Account?</string>
    <string name="login1">Login</string>
    <string name="welcome">Welcome</string>
    <string name="fillindetails1">Fill in the details to</string>
    <string name="continue1">continue</string>
    <string name="enteryourname">Enter Your Name</string>
    <string name="enteryouremail1">Enter Your Email id</string>
    <string name="enteryourphone">Enter Your phone number</string>
    <string name="alredy">Already a user? LOGIN</string>
    <string name="changephoto">Change Photo</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="privateinfo">PRIVATE INFO</string>
    <string name="emailaddress">E-mail Address</string>
    <string name="phonenum">Phone Number</string>
    <string name="username1">User Name</string>
    <string name="changepassword">CHANGE PASSWORD</string>
    <string name="mylocation">My Location</string>
    <string name="mylocation1">MY LOCATION</string>
    <string name="signout">SIGN OUT</string>
    <string name="savechange">SAVE CHANGES</string>
    <string name="cancle1">CANCEL</string>
    <string name="update">Update</string>
    <string name="newpass">New Password</string>
    <string name="currentpass">Current Password</string>
    <string name="location">location</string>
    <string name="ratings">Ratings</string>
    <string name="modelno">Model No.</string>
    <string name="success">Success</string>
    <string name="procceedsuccessful">Your Payment has been proceed succesfully.</string>
    <string name="done">DONE</string>
    <string name="support1">Support</string>
    <string name="tollfreeno">Toll Free No.</string>
    <string name="anyquery">For any query call us</string>
    <string name="call">Call</string>
    <string name="bookviasms">Book via SMS</string>
    <string name="bookoffline">Book offline via sms</string>
    <string name="smsus">SMS us on +91-84572182</string>
    <string name="booktype">To book type</string>
    <string name="tocanceltype">To cancel booking type</string>
    <string name="visitwebs">visit our website</string>
    <string name="equipmentType"><![CDATA[Book <Equipment Name>]]></string>
    <string name="cancelequipment"><![CDATA[CancelEquip <Equipment Name>]]></string>
    <string name="rentnewequipment">Rent New Equipment</string>
    <string name="oldpassword">Old Password</string>
    <string name="save">save</string>
    <string name="month">MONTH 2014</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="remove">Remove</string>
    <string name="successful">Successful</string>
    <string name="textsuccess">You have successfully made the payement of MAHINDRA-T71 for 5 days</string>
    <string name="details1">DETAILS</string>
    <string name="seereason">SEE REASON</string>
    <string name="reason">REASON</string>
    <string name="partnercancelled">Partner Cancelled this beacause</string>
    <string name="equipmentnotAvialable">Equipment Not Available</string>
    <string name="cancellationdetail">Cancellation Details</string>
    <string name="seedetails">SEE DETAILS</string>
    <string name="rentoutby">Rent Out By:</string>
    <string name="wallet">WALLET</string>
    <string name="History1">HISTORY</string>
</resources>