<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintmain1"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_marginTop="@dimen/dimen_3dp"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="89dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"

        android:layout_marginTop="@dimen/dimen_15dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cultivator" />

    <TextView
        android:id="@+id/equip_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Cultivator"
        android:textColor="@color/newscolor"
        android:textSize="@dimen/dimen_15dp"
        app:layout_constraintEnd_toStartOf="@+id/sedetail"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:text="Rs.1800"

        android:textSize="@dimen/dimen_12dp"
        android:textColor="@color/notificationcolorsubhead"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/equip_name" />


    <TextView
        android:id="@+id/to_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="8dp"
        android:textSize="@dimen/dimen_12dp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/from"
        tools:text="totime" />

    <View
        android:id="@+id/view14"
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:layout_marginTop="@dimen/dimen_15dp"
        android:background="#DCDCDC"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"></View>

    <TextView
        android:id="@+id/textView72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="20 bigha"
        android:drawableLeft="@drawable/bigha_icon"
        android:drawablePadding="@dimen/dimen_4dp"
        android:textColor="@color/belowtext"
        android:textSize="@dimen/dimen_12dp"
        app:layout_constraintStart_toStartOf="@+id/textView26"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />


    <TextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/date_icon"
        android:drawablePadding="@dimen/dimen_4dp"
        android:layout_marginTop="4dp"
        android:text="Tue, 09 Oct 2018"
        android:textColor="@color/belowtext"
        android:textSize="@dimen/dimen_12dp"
        app:layout_constraintStart_toStartOf="@+id/textPrice"
        app:layout_constraintTop_toBottomOf="@+id/textPrice" />

    <TextView
        android:id="@+id/sedetail"
        android:layout_width="@dimen/_buttonsize"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:background="@drawable/rectangleseedetail"
        android:gravity="center"
        android:padding="@dimen/dimen_8dp"
        android:text="@string/seedetails"
        android:textColor="@color/recentmain"
        android:textSize="@dimen/newsheadtextsizebookmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/equip_name"
        />


    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawableLeft="@drawable/time_icon"
        android:drawablePadding="@dimen/dimen_4dp"
        android:textColor="@color/recentcolor"
        android:textSize="@dimen/dimen_12dp"
        app:layout_constraintStart_toStartOf="@+id/from"
        app:layout_constraintTop_toBottomOf="@+id/from"
        tools:text="TextView" />

    <ImageView
        android:id="@+id/imageView63"
        android:layout_width="match_parent"

        android:layout_marginTop="@dimen/dimen_15dp"
        android:layout_height="3dp"

        android:layout_marginRight="8dp"
        android:layerType="software"
        android:src="@drawable/dashlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView44" />



    <TextView
        android:id="@+id/textView120"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_25dp"
        android:layout_marginLeft="@dimen/dimen_25dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="@dimen/dimen_15dp"


        android:text="@string/status"
        android:textAllCaps="true"
        android:textColor="@color/recentmain"
        android:textSize="@dimen/dimen_12dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView63" />

    <TextView
        android:id="@+id/textView154"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="@dimen/dimen_7dp"
        android:paddingBottom="@dimen/dimen_15dp"
        android:text="@string/pending"
        android:textAllCaps="true"
        android:textColor="@color/cardBackgroundColor"
        android:textSize="@dimen/dimen_12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView120"
        app:layout_constraintTop_toBottomOf="@+id/imageView63" />

    <TextView
        android:id="@+id/button3"
        android:layout_width="@dimen/_buttonsize"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAllCaps="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/buttonbackitem"
        android:gravity="center"
        android:padding="5dp"

        android:text="@string/rentagain"
        android:textColor="@android:color/white"
        android:textSize="@dimen/newsheadtextsizebookmark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView63" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp"
        android:text="@string/rentoutby"
        android:textColor="@color/belowtext"
        android:textSize="@dimen/dimen_12dp"
        app:layout_constraintStart_toStartOf="@+id/textView72"
        app:layout_constraintTop_toBottomOf="@+id/textView72" />
    <View

        android:layout_width="match_parent"

        android:layout_marginTop="@dimen/dimen_15dp"
        android:layout_height="1dp"

        android:layout_marginRight="8dp"
        android:layerType="software"
        android:src="@drawable/dashlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />


</android.support.constraint.ConstraintLayout>
